<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:id="@+id/titulo"
        style="@style/titulo"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginVertical="10dp"
        android:text="@string/titulo2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="97dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="#9BB2F6"
            android:drawableBottom="@mipmap/camara_foreground"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="null"

            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="#C77FCA"
            android:drawableBottom="@mipmap/corazon_foreground"
            android:gravity="center" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FCCDFE"
            android:drawableBottom="@mipmap/montana_foreground" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="#F4FD6F"
            android:drawableBottom="@mipmap/home_foreground" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="396dp"
        android:layout_height="200dp"
        android:layout_marginVertical="25dp"
        android:layout_marginHorizontal="5dp"
        app:cardElevation="5dp"
        card_view:cardCornerRadius="14dp"
        android:outlineAmbientShadowColor="@color/black">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imagen3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:scaleX="2"
            android:scaleY="3"

            android:src="@mipmap/container1_foreground"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/descripcion"
            android:padding="10dp"
            android:text="@string/tarjeta1"
            app:layout_constraintTop_toBottomOf="@+id/imagen3"
            android:textAlignment="textStart"
            android:textSize="10sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tarjeta2"
            android:layout_gravity="bottom"
            app:layout_constraintTop_toBottomOf="@+id/txt3"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="5dp"
        app:cardElevation="5dp"
        card_view:cardCornerRadius="14dp"
        android:outlineAmbientShadowColor="@color/black">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imagen2"
                android:layout_width="match_parent"
                android:layout_height="108dp"
                android:scaleType="fitXY"
                android:scaleX="3"
                android:scaleY="3"
                android:src="@mipmap/container2_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/tarjeta_1"
                android:textAlignment="textStart"
                app:layout_constraintTop_toBottomOf="@+id/imagen2"
                style="@style/descripcion"
                android:textSize="10sp"
                android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tarjeta_2"
            android:layout_gravity="bottom"
            app:layout_constraintTop_toBottomOf="@+id/txt1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>